# Somatic

./: .env.example  .gitignore  CMakeLists.txt  README.md  server.py
data/capabilities/: discovered_commands.json  telemetry_caps.json
data/mind/: goals.json  preferences.json  reflections.jsonl  self_model.json  skills.json
docs/: ARCHITECTURE.md  AVATAR_ACTIONS.md  COGNITIVE_TRACE.md  DEVELOPMENT_TODO.md  PROTOCOL_FREEZE.md  RUNTIME_MODES.md  SENSOR_PROVIDERS.md  SOMA_PHASE_10_PLAN.MD  SOMA_PHASE_8_PROJECT_TODO.md  SOMA_PHASE_9_2_RESOURCE_GOVERNOR_TODO.md  SOMA_PHASE_9_METABOLIC_GROWTH_TODO.md  VOLITIONAL_CORE.md  WEBSOCKET_PROTOCOL.md  index.html  simulator.html  tests.html
include/: hw_interface.h  llm_bridge.h  somatic_projector.h
scripts/: bootstrap.sh  compact_mind_state.py  compact_runtime_logs.py  run.sh  run_mock_reflex.sh  run_production.sh  run_real_linux_deepseek.sh  run_real_linux_reflex.sh  runtime_storage_report.py  stop.sh  test_actuation_dedupe.py  test_answer_finalizer.py  test_autobiography.py  test_autobiography_quality.py  test_baselines.py  test_bios_loop.py  test_budgeted_scheduler.py  test_command_planner.py  test_cpp_bridge.py  test_experience_distiller.py  test_growth_engine.py  test_growth_recovery_switch.py  test_internal_loop.py  test_internal_prompt_ledger.py  test_internal_radio_events.py  test_internal_radio_replay.py  test_internal_reinjection.py  test_journal_compaction.py  test_life_drive.py  test_light_tick_ui_regression.py  test_metabolism.py  test_mutation_reward.py  test_mutation_sandbox.py  test_nightly_reflection.py  test_output_filter.py  test_payload_throttling.py  test_phase8_regressions.py  test_phase9_introspection.py  test_power_policy.py  test_reflection_quality.py  (+15 more)
sensor_providers/: __init__.py  base.py  discoverer.py  endpoint.py  linux_system.py  mock.py  nvidia.py
soma_core/: __init__.py  actions.py  answering.py  autobiography.py  baselines.py  bios.py  command_planner.py  config.py  cpp_bridge.py  drives.py  executor.py  experience.py  goals.py  growth.py  growth_engine.py  internal_loop.py  internal_prompts.py  introspection.py  journal.py  life_drive.py  llm_core.py  memory.py  metabolism.py  mind.py  mutation.py  nightly.py  output_filter.py  policy.py  power_policy.py  profiler.py  reflection.py  relevance.py  resource_governor.py  reward.py  routines.py  scheduler.py  self_improvement.py  self_modify.py  skill_router.py  state_compaction.py  (+4 more)
soma_core/skills/: base.py  ingestion.py  memory.py  openclaw_adapter.py  registry.py  validation.py
soma_core/skills/builtin/: __init__.py  avatar.py  memory.py  mind.py  network.py  repo.py  system.py
src/: hw_interface.cpp  llm_bridge.cpp  main.cpp  somatic_projector.cpp
train/: requirements.txt  train_machine_fusion.py  train_projector.py
